# kop-kennitala

./: LICENSE  README.md  setup.cfg
src/: kennitala.py
